# HVAC

./: TESTING_PROTOCOL.md  pyproject.toml
.cursor/: context.json
.cursor/rules/: prompt-and-kb-skills.mdc
docs/: CLIENT_SETUP_GUIDE.md  CLIENT_TESTING_PROTOCOL.txt  COMPLETE_WORKFLOW_GUIDE.md  FORM_SETUP_CHECKLIST.md  GHL_API_ENDPOINTS_REFERENCE.md  GHL_CHECK_LEAD_SOURCE.md  LEAD_HANDLING_ISSUES_FOUND.md  TESTING_PROTOCOL_REVIEW_SUMMARY.md  inbound system prompt.txt  inbound_system_prompt_2.txt  outbound-systemprompt.txt  outbound_systemprompt_2.txt
kb/: calendar-and-booking-rules.txt  company-info.txt  outbound-call-procedures.txt  pricing-and-discounts.txt  service-area.txt  services-and-capabilities.txt  voice-style-and-templates.txt
scripts/: add_business_hours_function.py  cleanup_duplicate_tools.py  create_vapi_tools.py  push_hours_fix.py  send_test_sms.sh  test_custom_fields.py  test_custom_fields_with_ids.py  test_lead_handling.py  test_rehan_contact.py  test_rehan_direct.py  test_rehan_final.py  test_rehan_merge_fields.py  test_rehan_with_correct_keys.py  update_vapi_tools_v2.py
skills/: PromptEngineeringSkills.md  README.md
src/: main.py
src/config/: settings.py
src/functions/: __init__.py  book_appointment.py  cancel_appointment.py  check_business_hours.py  check_calendar_availability.py  create_contact.py  log_call_summary.py  send_confirmation.py
src/models/: __init__.py  schemas.py
src/utils/: appointment_cache.py  business_hours.py  cancellation_cache.py  ghl_fields.py  phone_normalize.py
src/webhooks/: __init__.py  demo.py  ghl.py
(+5 files in other folders)
